# university-app

./: Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  pytest.ini
event_api/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
event_api/migrations/: 0001_initial.py  0002_initial.py  0002_post_event_date_post_type.py  0003_alter_event_type.py  0003_rename_postphoto_eventphoto_and_more.py  0004_alter_event_description.py  0004_event_attendees_event_max_attendees.py  0005_alter_event_max_attendees.py  0006_alter_event_max_attendees.py  0007_alter_event_max_attendees.py  0008_remove_event_attendees.py
tests/test_usercontrol_api/: test_views.py
university_backend/: asgi.py  custom_middleware.py  settings.py  urls.py  wsgi.py
usercontrol_api/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
usercontrol_api/migrations/: 0001_initial.py  0002_remove_video_thumbnail_alter_photo_image_and_more.py  0002_user_tg_id.py  0003_remove_video_post_alter_post_options_and_more.py  0004_alter_postphoto_photo_alter_postvideo_video.py  0005_group_student.py  0006_student_group.py  0007_alter_student_group.py  0008_rename_age_group_age_group_and_more.py  0009_alter_postphoto_options_alter_postvideo_options_and_more.py  0010_remove_post_caption_post_description_and_more.py  0011_alter_postphoto_photo_alter_postvideo_video.py  0012_alter_postphoto_photo_alter_postvideo_video.py  0013_remove_group_age_group_remove_group_name_group_and_more.py  0015_alter_user_role.py  0016_alter_user_group.py  (+1 more)
